# isaac-cpp-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-ci.yml
code/: main.cpp
code/app/: isaacApp.cpp  isaacApp.h
code/common/: Commands.h  Direction.h  EventSystem.h  Grid.h  MetaData.h  entity.h
code/entity/: bullet.h  enemy.h  entity.h  player.cpp  player.h
code/view/: AssetManager.h  asset_manager.h  gameview.cpp  gameview.h
code/viewmodel/: GameViewModel.cpp  GameViewModel.h
code/viewmodel/entity/: bullet.cpp  bullet.h  enemy.cpp  enemy.h  player.cpp  player.h
code/viewmodel/room/: room.cpp  room.h
test/: GameViewModel_test.cpp  gameview_test.cpp
